# kaizo-token-presale-contract-on-near

./: Cargo.toml  Commands.txt  build.bat  build.sh  package-lock.json  package.json  token_presale.wasm
res/: token_presale.wasm
res/neardev/: dev-account  dev-account.env
src/: lib.rs
